docs: update README and report details

--- a/doc/13524034.tex
+++ b/doc/13524034.tex
@@ -167,6 +167,9 @@ Langkah di atas dapat dilihat implementasinya pada folder \textbf{\textit{src/so
 \section*{Lampiran}
 \addcontentsline{toc}{section}{Lampiran}
 
+\begin{enumerate}
+    \item Kode program dapat diakses pada: \url{https://github.com/jsndwrd/Tucil1_13524034}.
+\end{enumerate}
 \begin{table}[H]
 \centering
 \begin{tabularx}{\textwidth}{|c|X|c|c|}
@@ -187,5 +190,15 @@ Langkah di atas dapat dilihat implementasinya pada folder \textbf{\textit{src/so
 \hline
 \end{tabularx}
 \end{table}
+
+Tugas ini disusun sepenuhnya tanpa bantuan kecerdasan buatan (Generative AI), melainkan hasil pemikiran dan analisis mandiri.
+
+\begin{flushright}
+    \begin{figure}[h!]
+        \raggedleft
+        \includegraphics[width=0.3\textwidth]{signature.png}
+    \end{figure}
+    \textbf{Jason Edward Salim} \\
+\end{flushright}
 
 \end{document}
