--- a/doc/13524034.tex
+++ b/doc/13524034.tex
@@ -191,7 +191,7 @@ Langkah di atas dapat dilihat implementasinya pada folder \textbf{\textit{src/so
 \end{tabularx}
 \end{table}
 
-Tugas ini disusun sepenuhnya tanpa bantuan kecerdasan buatan (Generative AI), melainkan hasil pemikiran dan analisis mandiri.
+Tugas ini disusun sepenuhnya tanpa bantuan kecerdasan buatan \textit{(Generative AI)}, melainkan hasil pemikiran dan analisis mandiri.
 
 \begin{flushright}
     \begin{figure}[h!]
